--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Next generation Casio calculator data logger and remote control</title>
+  <title>Michael Fenton — Pause RECEIVE(): Real-time Sensor Logging wand remote control uisng  Casio FX-9750 Calculator</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750GIII so it can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
+  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton invented a new method to pause RECEIVE() on Casio FX-9750G calculators without COM error. Enables real-time data logging from sensors using SB-62 cable and microcontrollers like ESP32 or Picaxe. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -19,10 +19,21 @@
   <meta name="twitter:image" content="https://MikeFentonNZ.github.io/assets/img/profile.png" />
   <script type="application/ld+json">{
     "@context": "https://schema.org",
-    "@type": "Person",
+    "@type": "TechArticle",
+    "headline": "Pause Casio RECEIVE() for Sensor Integration",
+    "author": {
+      "@type": "Person",
+      "name": "Michael Fenton"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "mikefentonnz.github.io"
+    },
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
-    "url": "https://MikeFentonNZ.github.io/",
+    "url": "https://mikefentonnz.github.io/projects/casio-calculator-sensor-upgrade.html",
+    "datePublished": "2025-10-15",
+    "description": "This article explains how to pause RECEIVE() mid-communication on Casio FX-9750G calculators, enabling reliable data logging with ESP32, Picaxe, and other microcontrollers using the SB-62 serial cable."
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -79,11 +90,11 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Next-Generation Calculator Datalogger $10 upgrade</h2>
+        <h2 id="intro-heading">Next-Generation Casio FX-9750 Datalogger $10 upgrade</h2>
 	<h3>Providing equity and accessibility in STEM education</h3>
 	<p>Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750 calculator family so they can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
-<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
+<p>Michael has invented a method that allows the Casio FX 9750G and FX 9860G calculators to pause a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data using the SB-62 serial cable at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
 
 <p>This represents a paradigm shift from "dataloggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
 
