--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 	classrooms and cross-curricula Secondary school Science and Maths lessons. A variety
 	of home-made sensors are possible, many cost just a few cents, able to detect a wide
 	range of environmental factors. Michael's innovation is still being shared, inspiring
-	Primary teachers in New Zealand to do more hands-on science. </p>
+	Primary teachers in New Zealand to do more hands-on science.</p>
 	<p>Michael was also the first to research and publish the use of school
-	scientific calculators as data loggers, connected the Casio FX-9750 to a
-	Picaxe microcontroller. He published this research, code and schematics
-	as part of his Ministry of Education E-Learning Fellowship report. Other
+	Casio FX-9750 calculators to a $8 Picaxe sensor unit. He has invented a method
+	to pause a RECEIVE() without a COM error. His research, code and schematics were part of
+	his Ministry of Education E-Learning Fellowship report. Other
 	education forums and websites reproduced parts of his work. Soon after,
 	Michael invented a Real-World Interactive Games and Electronic Link
 	(RIGEL) Windows application combining the various sensor and Picaxe
