--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	Primary teachers in New Zealand to do more hands-on science.</p>
 	<p>Michael was also the first to research and publish the use of school
 	Casio FX-9750 calculators to a $8 Picaxe sensor unit. He has invented a method
-	to pause a RECEIVE() without a COM error. His research, code and schematics were part of
+	to pause RECEIVE() without a COM error, permitting timed sensro recording. His research, code and schematics were part of
 	his Ministry of Education E-Learning Fellowship report. Other
 	education forums and websites reproduced parts of his work. Soon after,
 	Michael invented a Real-World Interactive Games and Electronic Link
