--- a/sitemap.html
+++ b/sitemap.html
@@ -1,3 +1,4 @@
+<pre>
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
    <url>
@@ -49,3 +50,4 @@
       <loc>https://mikefentonnz.github.io/files/</loc>
    </url>
 </urlset>
+</pre>
