--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -130,7 +130,9 @@
 <img src="../assets/img/michael-fenton-casio-FX9750GIII-ESP8266.jpg" alt="'Build It' activity - receiving sensor data from a Wemos D1 mini ESP8266 sensor unit." />
 <p> </p>
 <blockquote><span lang="en">"<strong>'Build it'</strong> - receiving sensor data from a Wemos D1 mini ESP8266 sensor unit.</span></blockquote>
-<img src="../assets/img/michael-fenton-casio-serial-pause-receive.svg" alt="Pause Receive() flow control." />
+<div style="display: flex; justify-content: center; padding: 20px;">
+  <img src="../assets/img/michael-fenton-casio-serial-pause-receive.svg" style="max-width: 900px; width: 100%; height: auto;" alt="Michael Fenton pause RECEIVE() Protocol">
+</div>
 	<h3 id="test-it">Test it</h3>
 	<p>Experience shows students were familiar with many standard calculator functions, but learners had no experience of Casio BASIC to code their own programmes. Teacher-guided simple activities pre-tested and guaranteed to work will build learner confidence and wonderings. The new Casio BASIC code supplied to learners permits universal connection to microcontrollers and simple menu selections to begin data collection. Temperature and light intensity make good first experiences. Michael would use an introductory worksheet with three stages;
 </p>
@@ -163,7 +165,16 @@
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
   </div>
-  <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
+  <footer class="footer" role="contentinfo" aria-label="Site footer">
+  <p>© <span id="year"></span> Michael Fenton.</p>
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">
+    <small>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</small>
+  </a>
+  <p>This work may be copied, shared, remixed, and adapted for non-commercial purposes under the terms of the license.</p>
+  <p>Requirements: give appropriate credit, provide a link to the license, and indicate if changes were made. Derivatives must be licensed under identical terms.</p>
+  <p><small>Attribution example: <strong>Casio Calculator Datalogger Limitation Removed: Timed sensor sampling using a novel RECEIVE() algorithm — Michael Fenton</strong> — CC BY-NC-SA 4.0 — https://creativecommons.org/licenses/by-nc-sa/4.0/</small></p>
+  </footer>
+
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
