--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -202,7 +202,15 @@
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
   </div>
-  <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
+  <footer class="footer" role="contentinfo" aria-label="Site footer">
+    <p>© <span id="year"></span> Michael Fenton.</p>
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">
+    <small>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</small>
+  </a>
+  <p>This work may be copied, shared, remixed, and adapted for non-commercial purposes under the terms of the license.</p>
+  <p>Requirements: give appropriate credit, provide a link to the license, and indicate if changes were made. Derivatives must be licensed under identical terms.</p>
+  <p><small>Attribution example: <strong>Ultra Low-cost Data Logging using Digital Multimeters: Home-made sensors for equitable access to hands-on STEM — Michael Fenton</strong> — CC BY-NC-SA 4.0 — https://creativecommons.org/licenses/by-nc-sa/4.0/</small></p>
+  </footer>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
