--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -119,7 +119,7 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
             <li><strong>Test another persons app</strong> - this encouraged friendly peer review, shared expertise, and see there is more than 'one right way' to complete the task objectives.</li>
 	    <li><strong>Use your app</strong> - a first attempt at connecting to a Picaxe sensor module to replace keyboard or mouse control.</li>
           </ul>
-<p>There are many opprtunities for learners to engage in meaningful maths. For example, co-ordinates, reflection and symmetry, fractions, rounding, rates of change, and percentages.</p> 
+<p>There are many opportunities for learners to engage in meaningful maths. For example, co-ordinates, reflection and symmetry, fractions, rounding, rates of change, and percentages.</p> 
 
 <p>Depending on the goal of the lesson, learners would design their own sensor system and connect this to Michael's advanced RIGEL software to see the effect. One example was using light dependant resistors on the handle bars of an exercycle. RIGEL interpreted the sensor data as left and right arrow keys to control a spaceship in a 2D game.</p>
 	<blockquote><span lang="en"><a href="../files/michael-fenton-rigel-windows-software.pdf" target="_blank">Download the RIGEL example screenshots [PDF]</a></span></blockquote>
@@ -159,7 +159,15 @@ Similarly, this is where RIGEL, a digital technology, can be used to observe pat
 	<p><a href="../projects.html" class="button" aria-label="See projects and research by Michael Fenton">Back to Projects</a></p>
     </main>
   </div>
-  <footer class="footer" role="contentinfo" aria-label="Site footer"><p>© <span id="year"></span> Michael Fenton. All rights reserved.</p></footer>
+    <footer class="footer" role="contentinfo" aria-label="Site footer">
+    <p>© <span id="year"></span> Michael Fenton.</p>
+<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">
+    <small>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</small>
+  </a>
+  <p>This work may be copied, shared, remixed, and adapted for non-commercial purposes under the terms of the license.</p>
+  <p>Requirements: give appropriate credit, provide a link to the license, and indicate if changes were made. Derivatives must be licensed under identical terms.</p>
+  <p><small>Attribution example: <strong>RIGEL - Real-world Interactive Games and Electronics Link: Game design repurposed for creating Science-based games and apps to engage STEM learners — Michael Fenton</strong> — CC BY-NC-SA 4.0 — https://creativecommons.org/licenses/by-nc-sa/4.0/</small></p>
+  </footer>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
