--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+   <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
   <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
   <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
   <meta property="og:type" content="website" />
