--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,13 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
+   <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
   <meta property="og:title" content="Michael Fenton — Academic Portfolio" />
   <meta property="og:description" content="Portfolio and academic CV showcasing teaching innovation, research, talks, workshops, and publications." />
   <meta property="og:type" content="website" />
