--- a/teaching.html
+++ b/teaching.html
@@ -107,6 +107,10 @@
           <ul>
             <li><a href="projects/artificial-intelligence-in-education.html" aria-label="Link to Michael's think piece.">Link to Michael's analysis and experience.</a></li>
           </ul>
+	<h3>Instructional Design and Moderation</h3>
+          <ul>
+            <li><a href="projects/aligning-pedagogy-and purpose-instructional-design-and-moderation.html" aria-label="Link to Michael's philosophy.">Link to Michael's philosophy and example.</a></li>
+          </ul>
       <h3>Teaching - Primary to Postgraduate</h3>
           <ul>
             <li>Level 7 Grad Dip.Tchg Science and Mathematics Education and Education Leadership.</li>
