--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Lost in Space, B9 robot, STEM teaching, robot science lab, cross-curricula STEM, creativity in science, science in TV, science in movies, Bill Mumy, Will Robinson",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
