--- a/projects/casio-calculator-picaxe-datalogger.html
+++ b/projects/casio-calculator-picaxe-datalogger.html
@@ -23,6 +23,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Casio fx-9750G, casio calculator data logger, Picaxe",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -79,13 +80,14 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Development of Casio Calculator to Picaxe Sensor Systems</h2>
+        <h2 id="intro-heading">Development of Casio Calculator to Picaxe Data Logger</h2>
 	<p>Michael Fenton came to Secondary teaching with research and industry experience.
 	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
 	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes.
  	After teaching Chemistry, Biology, Physics and Calculus, he wondered if he could invent a low cost system that would permit authentic hands-on data collection for cross-curricula learning in these subject.</p> 
 <p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic calculator. He invented a reliable and robust Picaxe to Casio calculator bi-directional data logger and remote control system. This upgrades the Casio FX-9750 and FX-9860 graphic calculators to robot remote control units and sensor data display and recording units.</p>
-<p>The Picaxe / Casio data logger can accept a radio transmitter module for wireless remote bi-directional communication. A test vehicle called CASI worked flawlessly as a proof-of-concept</p>
+<p>The Picaxe / Casio data logger can accept a radio transmitter module for wireless remote bi-directional communication. A test vehicle called CASI worked flawlessly as a proof-of-concept.</p>
+	<blockquote><span lang="en"><a href="casio-calculator-sensor-upgrade.html" target="_blank"><strong>UPDATE:</strong> Link to Casio serial protocol hack that permits time interval logging by pausing mid RECEIVE() with no COM error.</a></span></blockquote>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael pioneered classroom trials for using a standard school Casio graphic calulator as a datalogger sensor system for cross-curricular learning.</li>
