--- a/projects/casio-calculator-sensor-upgrade.html
+++ b/projects/casio-calculator-sensor-upgrade.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Next generation Casio calculator data logger and remote control</title>
+  <title>Michael Fenton — Updated Casio calculator data logger and remote control</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton. Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750GIII so it can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
+  <meta name="description" content="Michael Fenton upgrades his Picaxe Casio calculator data logger developed and published in the mid-2000s. Michael's Casio serial protocol hack uses Casio FX-9750 and FX-9860 calculators for data logging at ultra low cost.  Attach sensors to connect Casio calculators to Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability." />
+
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -23,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Casio fx-9750G, Casio fx-98060, casio calculator data logger, Picaxe, ESP8266, ESP32, pause mid receive ,casio serial protocol, RECEIVE hack",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -81,9 +83,9 @@
       <section class="intro" aria-labelledby="intro-heading">
         <h2 id="intro-heading">Next-Generation Calculator Datalogger $10 upgrade</h2>
 	<h3>Providing equity and accessibility in STEM education</h3>
-	<p>Michael Fenton has improved his original Picaxe-to-Casio communication protocols developed and published in the mid-2000s. The updated system transforms the Casio FX-9750 calculator family so they can sense the real world using Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
+	<p>Michael Fenton has improved his original Picaxe Casio calculator data logger developed in the mid-2000s. Michael discovered a Casio serial protocol hack to permit time interval data logging using Casio FX-9750 calculators connected to Picaxe, ESP8266 or ESP32 microcontrollers. The open-source design encourages teacher customisation and student innovation while providing robust, classroom-tested reliability.</p>
 
-<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause indefinitely during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
+<p>Michael has identified a method that allows the Casio FX 9750G and FX 9860G calculators to pause during a RECEIVE() operation without triggering a COM ERROR. This enables external sensor units to send data at preset intervals (e.g., every 10 seconds, every minute) without requiring specialized hardware such as the EA 200 Data Analyzer, CLAB or E-Con application. Michael's system realises a hundred-fold decrease in cost.</p>
 
 <p>This represents a paradigm shift from "dataloggers are for senior students only" to "every student deserves tools to investigate their world." The system has proven particularly powerful for engaging learners who traditionally see science as abstract and inaccessible, transforming them into confident, curious investigators.</p>
 
@@ -150,7 +152,7 @@
 <p>Always remind learners that scientists work carefully and safely, no matter what they see in movies or TV!</p>
 <img src="../assets/img/michael-fenton-casio-receive-pause.png" alt="Comparison of Michael's hack." />
 <p> MORE DETAILS WILL FOLLOW - including source code, lesson ideas, and learning materials. If you would like to see Michael's original work with teaching ideas and examples, click the button below.</p>
-	<p><a href="casio-calculator-picaxe-sensors.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
+	<p><a href="casio-calculator-picaxe-datalogger.html" class="button" aria-label="See the original Casio - Picaxe data logger by Michael Fenton">Go to original Casio-Picaxe data logger</a></p>
 	<h3 id="presentations">YouTube videos</h3>
 	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. He is working on more material for this page. For now you can see a demonstration of the "Universal" Casio BASIC program that communicates with Picaxe or ESP8266 or ESP32 sensor units.</p>
 <div class="video-container">
