--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "DIY sensors, home made data logger, hands-on science, practical investigations, low cost science equipment, maker science, build science equipment, sciene at home, future focused learning, digital multimeter sensors, cross-curricula learning, digital multimeter data logger alternative, cheap data logger",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
