--- a/projects/aligning-pedagogy-and purpose-instructional-design-and-moderation.html
+++ b/projects/aligning-pedagogy-and purpose-instructional-design-and-moderation.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Instructional design, assessment moderation, STEM programmes, future focused learning, teaching perspectives, cross-curricula learning",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
