--- a/projects/game-design-coding-learning.html
+++ b/projects/game-design-coding-learning.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Game design, STEM teaching, future focused, art and science, cross-curricla learning, creativity in STEM",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
