--- a/projects/maker-science-robotics-electronics.html
+++ b/projects/maker-science-robotics-electronics.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Instructional design, Maker science, STEM programmes, future focused learning, cross-curricula learning, hands-on science, build your own science equipment, coding for science, robotics, game design, Picaxe",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
