--- a/projects/rigel-games-electronics-link.html
+++ b/projects/rigel-games-electronics-link.html
@@ -24,6 +24,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Games design software for science, art and science, STEM programmes, future focused learning, cross-curricla learning, real world interactive games, electronics link, RIGEL, Picaxe, ESP32, ESP8266, robotics, science simulations, CPR simulator, science software, Game maker",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
