--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton." />
+  <meta name="description" content="Innovative cross-curricula STEM projects, examples showcasing innovative teaching and research by Michael Fenton.  Science teaching through making,  Maker Science, Digital Multimeters as Low Cost Dataloggers, Game Design to Teach STEM, gaem design to teach science, arduino casio calculator data logger, picaxe casio calculator data logger, Lost in Space B9 robot, art and science, real world interactive games and electronics link" />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -27,6 +27,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "arduino casio calculator data logger hack, picaxe casio calculator data logger hack, game design, robotics, cross-curricula STEM, art and science, game maker, Maker Science, digital multimeter data logger substitute",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
