--- a/teaching.html
+++ b/teaching.html
@@ -27,6 +27,7 @@
     "name": "Michael Fenton",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "arduino casio calculator data logger hack, picaxe casio calculator data logger hack, moderation, instructional design, B9 robot, cross-curricula STEM, art and science, artificial intelligence in education, Elearning fellowship, scientist, teacher, education lecturer, educaiton consultant",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
