--- a/teaching.html
+++ b/teaching.html
@@ -132,6 +132,14 @@
 	    <li>Writer/Instructional Designer - World Interactive Software: Year 12 Interactive Physics.</li>
           </ul>
 <img src="assets/img/michael-fenton-physics-interactive.jpg" alt="Year 12 Interactive Physics written by Michael Fenton" width="400" />
+      <h3>Research & Innovation: Ultra Low-cost science lab equipment</h3>
+      <figure>
+        <img src="assets/img/michael-fenton-casio-FX9750GIII-ESP8266.jpg" alt="Arduino casio calculator data logger hack. Casio calculator serial protocol hack to pause mid RECEIVE() without generating a COM error." width="300" height="300"/>
+        <figcaption>Low-cost arduino casio calculator data logger / Picaxe casio calculator data logger. Research proves time interval recording is possible without generating a COM error.</figcaption>
+      </figure>
+	<p><a href="projects/casio-calculator-sensor-upgrade.html" aria-label="Link to Casio FX-9750 serial protocol hack details">Link to Casio FX-9750 serial protocol hack details</a></p>
+      <blockquote><span lang="en">“Breakthrough:The main limitation of using a Casio calculator with Picaxe or ESP / Arduino devices has been overcome. This enables low budget data logging for Biology, Chemistry, Physics and Mathematics using learners own calculators. Time interval logging using a casio fx-9750 or fx-9860 calcualtor is now possible without triggering a COM error. This eliminates having to purchase costly EA-200 or CLAB data acquisition units. Ultra low-cost home-made sensors for colorimetry, water hardness, conductivity, salinity, and thermodynamics investigations.”</span></blockquote>
+      <p></p>
       <h3>Combined STEM for old and young - TV and movie props</h3>
       <figure>
         <img src="assets/img/b9.jpg" alt="Prototype B9 mobile robot and science lab. AI interactive voice control." width="400" height="400"/>
