--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
+  <meta name="description" content="Michael Fenton innovative teaching, education research, teacher, scientist,Nexus Research Group, discovered casio serial protocol pause RECEIVE() without a COM error, picaxe casio calculator data logger, digital multimter data logger, RIGEL games design for science teaching." />
   <meta name="author" content="Michael Fenton" />
   <meta name="theme-color" content="#151a2f" />
   <link rel="canonical" href="https://MikeFentonNZ.github.io/" />
@@ -27,6 +27,7 @@
     "name": "Michael Fenton, MRSNZ",
     "jobTitle": "Scientist, STEM Education lecturer, Education innovator, Consultant, Writer",
     "url": "https://MikeFentonNZ.github.io/",
+    "keywords": "Michael Fenton, scientist, STEM education lecturer, Nexus Research Group, instructinal design, moderation, B9 robot, RIGEL real world games and electronics link, game design in science, education research, future-focused, Bill Pickering, picaxe casio calculator data logger, arduino casio calculator data logger",
     "image": "https://MikeFentonNZ.github.io/assets/img/profile.png",
     "sameAs": [
       "https://nz.linkedin.com/in/mikefentonnz",
@@ -117,7 +118,7 @@
 	Primary teachers in New Zealand to do more hands-on science.</p>
 	<p>Michael was also the first to research and publish the use of school
 	Casio FX-9750 calculators to a $8 Picaxe sensor unit. He has invented a method
-	to pause RECEIVE() without a COM error, permitting timed sensro recording. His research, code and schematics were part of
+	to pause RECEIVE() without a COM error, permitting timed sensor recording. His research, code and schematics were part of
 	his Ministry of Education E-Learning Fellowship report. Other
 	education forums and websites reproduced parts of his work. Soon after,
 	Michael invented a Real-World Interactive Games and Electronic Link
